Fix Railway deployment: add railway config and update nixpacks to install pnpm

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,12 @@
 [phases.setup]
-nixPkgs = ['nodejs_20', 'pnpm']
+nixPkgs = ['nodejs_20']
+aptPkgs = []
 
 [phases.install]
-cmds = ['pnpm install --frozen-lockfile']
+cmds = [
+  'npm install -g pnpm@10.18.2',
+  'pnpm install --frozen-lockfile'
+]
 
 [phases.build]
 cmds = ['pnpm --filter @congo-gaming/web build']
