--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,12 +4,11 @@ aptPkgs = []
 
 [phases.install]
 cmds = [
-  'npm install -g pnpm@10.18.2',
-  'pnpm install --frozen-lockfile'
+  'npm install -g pnpm@10.18.2 && pnpm install --frozen-lockfile'
 ]
 
 [phases.build]
-cmds = ['pnpm --filter @congo-gaming/web build']
+cmds = ['cd apps/web && pnpm build']
 
 [start]
-cmd = 'pnpm --filter @congo-gaming/web start'
+cmd = 'cd apps/web && pnpm start'
